fix valign of enter icon

--- a/src/css/enter/_enter.scss
+++ b/src/css/enter/_enter.scss
@@ -96,7 +96,6 @@ body.enter.bg15{background-image:url(../images/bg/15.jpg)}
 .enter #eMethods a:focus{opacity:0.7}
 .enter #eMethods a svg{width:40px;height:40px;min-width:40px;float:left;margin-right:10px;padding:5px;}
 .enter #eMethods a i{width:40px;height:40px;min-width:40px;float:left;margin-right:10px;font-size:2.5em;}
-.enter #eMethods a i:before{vertical-align:baseline;}
 .enter #eMethods a span{display:block;width:100%;height:100%;font-size:1.2em;}
 .enter #eMethods a abbr{display:none}
 .enter #eMethods a.active{background-color:rgba(0,0,0,0.8);display:none;}
